--- a/QA_Hub/templates/paginator.html
+++ b/QA_Hub/templates/paginator.html
@@ -2,36 +2,34 @@
     <ul class="pagination">
 
         {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
-        <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
         {% endif %}
 
         {% if page_obj.number > 3 %}
-        <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
-        {% if page_obj.number > 4 %}
-        <span class="page-link">...</span>
-        {% endif %}
+            <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
+            {% if page_obj.number > 4 %}
+                <span class="page-link">...</span>
+            {% endif %}
         {% endif %}
 
         {% for num in page_obj.paginator.page_range %}
-        {% if num == page_obj.number %}
-        <li class="page-item"><strong class="page-link">{{ num }}</strong></li>
-        {% elif num >= page_obj.number|add:"-2" and num <= page_obj.number|add:"2" %}
-        <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-        {% endif %}
+            {% if num == page_obj.number %}
+                <li class="page-item"><strong class="page-link">{{ num }}</strong></li>
+            {% elif num >= page_obj.number|add:"-2" and num <= page_obj.number|add:"2" %}
+                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+            {% endif %}
         {% endfor %}
 
         {% if page_obj.number < page_obj.paginator.num_pages|add:"-2" %}
-        {% if page_obj.number < page_obj.paginator.num_pages|add:"-3" %}
-        <span class="page-link">...</span>
-        {% endif %}
-        <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{
-            page_obj.paginator.num_pages }}</a></li>
+            {% if page_obj.number < page_obj.paginator.num_pages|add:"-3" %}
+            <span class="page-link">...</span>
+            {% endif %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">
+            {{ page_obj.paginator.num_pages }}</a></li>
         {% endif %}
 
         {% if page_obj.has_next %}
-        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-        <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
         {% endif %}
     </ul>
 </nav>
