--- a/QA_Hub/templates/tag.html
+++ b/QA_Hub/templates/tag.html
@@ -8,19 +8,11 @@
 
 <articles class="d-flex gap-3 flex-column">
 
-    {% include "question_card.html" %}
-    {% include "question_card.html" %}
-    {% include "question_card.html" %}
+    {% for obj in page_obj %}
+        {% include "question_card.html" with question=obj %}
+    {% endfor %}
 
-    <nav class="mt-3">
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item active"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item disabled"><a class="page-link" href="#">...</a></li>
-            <li class="page-item"><a class="page-link" href="#">53</a></li>
-        </ul>
-    </nav>
+    {% include "paginator.html" %}
 
 </articles>
 
