--- a/QA_Hub/templates/index.html
+++ b/QA_Hub/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
 
 <div class="d-flex align-items-center gap-2 mb-4">
-    <h1>New Questions</h1>
-    <a href="{% url 'hot' %}">Hot Questions</a>
+    <h1>{{ title }}</h1>
+    <a href="{% url url %}">{{ url_title }}</a>
 </div>
 
 <articles class="d-flex gap-3 flex-column">
